--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ li:hover{
 header {
     display: flex;
     position: sticky;
+    top: 0;
+    z-index: 10;
     justify-content: space-between;
     background-color: white;
     height: 4rem;
